# Projet-Gestion-Bancaire

./: .gitignore  404.html  README.md  bank.db  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build_project.yml  pipeline.yml
Vue/: VuePrincipale.py  test.py
docs/: guide.md  index.md  reference.md
guide/: index.html
reference/: index.html
src/: main.py
src/Controleur/: Logger.py  controleur.py
src/Modele/: Client.py  Compte.py  Customer.py  DBSetup.py  Operation.py  SQLManager.py
src/Modele/Class_SQL/: Customer_SQL.py
src/Modele/SQL/: DBSetup.py  SQLComptes.py  SQLCustomer.py  SQLManager.py  SQLOperations.py
src/Vue/: VuePrincipale.py  account_operations.py  operations.py
