[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gestion_bancaire"
version = "0.1.0"
description = "Setup script for the gestion_bancaire package"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mkdocstrings[python]>=0.18"
    # "pandas>=1.3.0",
    # "openpyxl>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "black",
    "pytest",
    "ruff",
]

[project.scripts]
# Exemple pour lancer ton appli via la console : 
# gestion-banque = "gestion_bancaire.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# --- Configuration des outils (Bonus) ---

[tool.black]
line-length = 88
target-version = ['py311']

[tool.ruff]
line-length = 88
select = ["E", "F", "B"] # Erreurs, Flake8, Bugbear